<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMembersAndOrderActivity">

    <AutoCompleteTextView
        android:id="@+id/addFighterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fighter"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addFighterRoll"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/addFighterRoll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/roll"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addFighter"
        app:layout_constraintTop_toBottomOf="@+id/addFighterName" />

    <Button
        android:id="@+id/addFighter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addFighterToList"
        android:text="@string/add"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFighterRoll" />

</androidx.constraintlayout.widget.ConstraintLayout>