<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowMemberAndOrderOverviewActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/memberOverview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addMember"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:onClick="openAddFighter"
        android:text="@string/addMembers"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/updateBattleplan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/resetFighters"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="164dp"
        android:onClick="resetFighters"
        android:text="@string/resetFighters"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/updateBattleplan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateBattleplan"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:onClick="updateBattleplan"
        android:text="@string/updateBattleplan"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/createBattleplan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addMember"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createBattleplan"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:onClick="createNewBattleplan"
        android:text="@string/createBattleplan"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/updateBattleplan"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>