<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainOverviewActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/roundNrActiveBattle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/activeFighter"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="65dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        tools:layout_editor_absoluteX="24dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/memberOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp" />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateBattleplanFloat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/updateBattleplan"
        android:onClick="updateBattleplan"
        app:layout_constraintEnd_toStartOf="@+id/addFighterFloat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_pageview_24"
        tools:layout_editor_absoluteY="1200dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFighterFloat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@string/add"
        android:onClick="openAddFighter"
        app:srcCompat="@drawable/ic_baseline_add_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resetFightersFloat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/updateBattleplanFloat" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/resetFightersFloat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/resetFighters"
        android:onClick="resetFighters"
        app:layout_constraintEnd_toStartOf="@+id/createBattleplanFloat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/addFighterFloat"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"
        app:srcCompat="@drawable/ic_baseline_delete_forever_24"
        app:fabSize="normal"
        tools:layout_editor_absoluteY="1200dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/createBattleplanFloat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/createBattleplan"
        android:onClick="createNewBattleplan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/resetFightersFloat"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="24dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_baseline_create_new_folder_24"
        tools:layout_editor_absoluteY="1200dp" />


</androidx.constraintlayout.widget.ConstraintLayout>